<resources>
    <string name="app_name">Another To-Do List App</string>
    <string name="my_to_do_list">My To-Do List</string>
    <string name="undone_count_format">To-dos left undone: %1$d</string>
    <string name="show_hide_done">Show/Hide Done</string>
    <string name="lorem_ipsum_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="enter_your_to_do">What need to do…</string>
    <string name="none_priority">None</string>
    <string name="low_priority">Low</string>
    <string name="important_priority">Important</string>
    <string name="priority">Priority</string>
    <string name="deadline">Deadline</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="save_changes_confirmation_title">There are changes</string>
    <string name="do_you_want_to_save_changes">Do you want to save changes?</string>
    <string name="deleting_confirmation_title">Deleting a to-do</string>
    <string name="do_you_want_to_delete_todo">Do you want to delete this to-do?</string>
    <string name="yes_save">Yes</string>
    <string name="no_save">No</string>
    <string name="cancel_save">Cancel</string>
    <string name="no_todos_message">There are no entries.\nClick \"+\" button to create new one.</string>
    <string name="undo_deletion_snackbar">Do you want to cancel deletion?</string>
    <string name="restore_todo">Restore To-Do</string>
    <string name="error_occurred_format">An error has occurred: %1$s</string>
    <string name="search_to_do">Search</string>
    <string name="list_to_dos">To-Dos</string>
    <string name="account">Account</string>
    <string name="logged_in_user_email">Logged-In User Email:</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_title">Signing Out</string>
    <string name="sign_out_message">Would you really like to sign out?</string>
    <string name="sign_out_yes">Yes</string>
    <string name="sign_out_cancel">Cancel</string>
    <string name="synchronization_error">Synchronization error: %1$s</string>
    <string name="internet_is_not_available_msg">Internet is not available, synchronization is not possible</string>
    <string name="search_to_dos_hint">Search to-dos</string>
    <string name="button_sort_options">Sort Options</string>
    <string name="button_filter_options">Filter Options</string>
    <string name="date_sorting">Date sorting</string>
    <string name="by_creation_date">By creation date</string>
    <string name="by_date_of_change">By date of change</string>
    <string name="new_ones_first">New ones first</string>
    <string name="old_ones_first">Old ones first</string>
    <string name="sort_by_deadline">Sort by deadline</string>
    <string name="earlier_deadline_first">Earlier deadline first</string>
    <string name="later_deadline_first">Later deadline first</string>
    <string name="don_t_sort_by_deadline">Don\'t sort by deadline</string>
    <string name="sort_by_importance">Sort by importance</string>
    <string name="most_important_first">Most important first</string>
    <string name="less_important_first">Less important first</string>
    <string name="don_t_sort_by_importance">Don\'t sort by importance</string>
    <string name="low_priority_to_dos">Low priority to-dos</string>
    <string name="basic_priority_to_dos">Basic priority to-dos</string>
    <string name="important_priority_to_dos">Important priority to-dos</string>
    <string name="with_deadline_only">With deadline only</string>
    <string name="label_filter_options">Filter Options</string>
    <string name="label_sort_options">Sort Options</string>
    <string name="completed">Completed</string>
    <string name="switch_layout_result_list_view_linear_grid">Switch layout result list view (linear/grid)</string>
</resources>