<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.searchtodos.fragments.FilterOptionsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_primary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:background="@color/transparent"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp">
                <include
                    android:id="@+id/header_view"
                    layout="@layout/toolbar_search_filter_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/low_priority_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:checked="true"
                    android:text="@string/low_priority_to_dos"
                    android:textAppearance="@style/BodyTextStyle" />
                <CheckBox
                    android:id="@+id/basic_priority_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:checked="true"
                    android:text="@string/basic_priority_to_dos"
                    android:textAppearance="@style/BodyTextStyle" />
                <CheckBox
                    android:id="@+id/important_priority_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:checked="true"
                    android:text="@string/important_priority_to_dos"
                    android:textAppearance="@style/BodyTextStyle" />
                <CheckBox
                    android:id="@+id/with_deadline_only_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/with_deadline_only"
                    android:textAppearance="@style/BodyTextStyle" />
                <CheckBox
                    android:id="@+id/completed_opt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/completed"
                    android:textAppearance="@style/BodyTextStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>