<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_primary"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:elevation="4dp"
            android:hint="@string/enter_your_to_do"
            app:boxBackgroundColor="@color/back_secondary"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_desciption_edit_text"
                style="@style/BodyTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:minLines="3"
                android:inputType="textMultiLine|textCapSentences"
                android:lineSpacingExtra="3sp"
                tools:text="@string/lorem_ipsum_example" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/importance_choose_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingEnd="72dp">

            <TextView
                style="@style/BodyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/priority" />

            <TextView
                android:id="@+id/importance_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/none_importance" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/BodyTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/deadline" />

                <TextView
                    android:id="@+id/deadline_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@drawable/deadline_date_color_selector"
                    android:textColorLink="@color/blue"
                    tools:text="@tools:sample/date/ddmmyy" />
            </LinearLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/deadline_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:thumbTint="@drawable/deadline_switch_thumb_selector"
                app:trackTint="@drawable/deadline_switch_track_selector"
                app:useMaterialThemeColors="false"
                tools:checked="true" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/delete_item"
            style="@style/BodyTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:drawablePadding="12dp"
            android:paddingStart="0dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            android:text="@string/delete"
            android:textColor="@color/red"
            app:drawableStartCompat="@drawable/delete" />

    </LinearLayout>
</layout>