<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.searchtodos.fragments.SearchTodosFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_primary">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@id/edit_text_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/todo_item_search_result"/>

        <EditText
            android:id="@+id/edit_text_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:hint="@string/search_to_dos_hint"
            android:textColorHint="@color/label_tertiary"
            android:drawableStart="@drawable/search"
            android:drawableTint="@color/label_secondary"
            android:drawablePadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_search_options"/>

        <LinearLayout
            android:id="@+id/layout_search_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:weightSum="5">

            <LinearLayout
                android:id="@+id/button_sort_options"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:layout_weight="2"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/sort_list"
                    android:padding="8dp"/>
                <TextView
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_sort_options"
                    android:layout_gravity="center_vertical|end"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_filter_options"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:layout_weight="2"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/filter_list"
                    android:padding="8dp"/>
                <TextView
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_filter_options"
                    android:layout_gravity="center_vertical|end"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/button_change_recyclerview_layout_manager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/grid_view"
                android:layout_gravity="center"
                android:background="?android:selectableItemBackground"
                android:paddingBottom="12dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="12dp"
                android:contentDescription="@string/switch_layout_result_list_view_linear_grid" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>